Use some header defined constants to decide how many of various sorts of recurrence rules should be allowed; this fixes the problem of only 7 BYDAY rules being allowed (bug 330522); thanks to Michael Hovis <mhovis@simdesk.com> for the patch, r=dmose